--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         calc.addEventListener("click",function(){
             const num1 = parseInt(document.getElementById("num1").value);
             const num2 = parseInt(document.getElementById("num2").value);
-            const result = num1 - num2; 
+            const result = num1 + num2; 
             document.getElementById("calcResult").textContent = result;
         })
 
@@ -63,7 +63,7 @@
             setInterval(function () {
                 count++;
                 document.getElementById("timerResult").textContent = `タイマー: ${count}秒経過`;
-                if (count === 5) {
+                if (count == 5) {
                     document.getElementById("timerResult").textContent += " - タイマー終了";
                 }
             }, 1000);
