--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         let form = document.querySelector(".form");
         form.addEventListener("submit",function(){
             const name = document.getElementById("username").value;
-            if (name = "") {
+            if (name == "") {
                 alert("名前を入力してください");
                 return false;
             }
